test/domains/compilerErrors/notsupportedBulkAdd-assoc.chpl
use notsupportedCommon;

var inds = [1, 2, 3];

writeln(dfltAssociativeBase.bulkAdd(inds));
